# MPC-nav

./: .gitignore  CLAUDE.md  MPC_v1.py  MPC_v2.py  MPC_v3.py  README.md  config_sets.py  hitung_er.py  mavlink_driver.py  plot.py  pyproject.toml  requirements.txt
.docs/: mpc_retune_va21.md  sitl_test_protocol.md
docs/: pi_baseline_notes.md  sitl_test_protocol.md
hardware/: __init__.py  mavlink_driver.py  rtl_monitor.py
legacy/: MPC_v2.py  MPC_v3.py  README.md
mpc_nav/: __init__.py  config.py  dynamics.py  geometry.py  io_utils.py  l1_loiter.py  lateral_lqr.py  ltv_mpc.py  main.py  metrics.py  pi_loiter.py  pid_loiter.py  plotting.py  simulation.py  stats.py  wind.py
scripts/: auto_tune.py  bench_mpc_memory.py  lqr_roll_step.py  sitl_auto_eval.py  sitl_tune.py  tune_l1.py
tests/: test_lqr_roll.py
